Updated reference style

--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -14,7 +14,9 @@ Publications
 	pages = {105--117},
 	publisher = {Springer Nature Switzerland},
 	title = {Grading Documentation with Machine Learning},
-	year = {2024}}
+	year = {2024},
+	doi = {10.1007/978-3-031-64302-6_8}
+}
 
 @article{10.1145/3636515,
 author = {Messer, Marcus and Brown, Neil C. C. and K\"{o}lling, Michael and Shi, Miaojing},
